test/ppx_irmin/deriver/errors/bad_antiquote_payload.ml
let _ = [%irmin: unit * [%e: val x : unit]]
